// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Buttons component Should align to the right 1`] = `
<div
  className="buttons is-right"
>
  <button
    className="button"
    disabled={false}
    onClick={[Function]}
    style={Object {}}
    tabIndex={0}
  >
    test
  </button>
</div>
`;

exports[`Buttons component Should be a a default list of buttons 1`] = `
<div
  className="buttons"
>
  <button
    className="button"
    disabled={false}
    onClick={[Function]}
    style={Object {}}
    tabIndex={0}
  >
    test
  </button>
</div>
`;

exports[`Buttons component Should be centered 1`] = `
<div
  className="buttons is-centered"
>
  <button
    className="button"
    disabled={false}
    onClick={[Function]}
    style={Object {}}
    tabIndex={0}
  >
    test
  </button>
</div>
`;

exports[`Buttons component Should concat class names in props with Bulma class name 1`] = `
<div
  className="buttons super-class-1 dope-class-2"
>
  <button
    className="button"
    disabled={false}
    onClick={[Function]}
    style={Object {}}
    tabIndex={0}
  >
    test
  </button>
</div>
`;

exports[`Buttons component Should exist 1`] = `[Function]`;

exports[`Buttons component Should group buttons together 1`] = `
<div
  className="buttons has-addons"
>
  <button
    className="button"
    disabled={false}
    onClick={[Function]}
    style={Object {}}
    tabIndex={0}
  >
    test 1
  </button>
  <button
    className="button"
    disabled={false}
    onClick={[Function]}
    style={Object {}}
    tabIndex={0}
  >
    test 2
  </button>
</div>
`;
